gl33-master/src/test/deca/context/invalid/other/affectation_int_void.deca
// Invalid test
// Affectation d'un int à un void

{
   int n;
   void v;

   v = n;
   v = 2;
}
